--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 .idea/
-EmployeeActivityManager/.idea
-EmployeeActivityManager/timetracker/__pycache__
+./EmployeeActivityManager/.idea
+./EmployeeActivityManager/timetracker/__pycache__
